--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ body {
     background-color: lightgray;
 }
 
-h1 {
+.title {
     font-size: 3rem;
     text-align: center;
     margin-bottom: 20px;
