--- a/style.css
+++ b/style.css
@@ -7,6 +7,13 @@ body {
     background-color: lightgray;
 }
 
+.container {
+    background-color: white;
+    padding: 20px;
+    margin: 10px 20px;
+    border-radius: 8px;
+}
+
 .title {
     font-size: 3rem;
     text-align: center;
@@ -19,20 +26,24 @@ img {
 
     display: block;
     margin: 0 auto;
+
+    border: 10px solid white;
+    border-radius: 8px;
 }
 
 h3 {
     text-align: center;
-    margin: 20px 0;
 }
 
 p {
     padding: 0 30px;
+    margin-top: 10px;
 }
 
 ul {
     text-align: center;
     line-height: 30px;
+    margin-top: 10px;
 }
 
 li {
